# strife

./: Dockerfile  docker.sh
legacy/: type.h  type_half.h
server/: index.js
strife/: CMakeLists.txt  TODO.txt  build.sh  config.h.in  main.cpp
strife/common/: CMakeLists.txt
strife/common/include/: action.h  data.h  dispatcher.h  identifier.h  unique.h
strife/common/include/dispatch/: dispatcher.h  message.h
strife/common/include/input/: button_input.h  input_manager.h  key_button_processor.h  mouse_button_processor.h  mouse_input.h  mouse_processor.h
strife/common/include/serialization/: contexts.h  data.h  serialization.h
strife/common/include/strife/: common.h
strife/common/include/strife/common/: iterator.h
strife/common/include/strife/functional/: action.h  callback.h  dispatcher.h  dispatchers.h  message.h  token.h
strife/common/include/strife/input/: button_input.h  input_manager.h  key_button_processor.h  mouse_button_processor.h  mouse_input.h  mouse_processor.h
strife/common/include/strife/reflection/: type.h
strife/common/include/strife/serialization/: contexts.h
strife/common/include/strife/time/: time.h  timer.h
strife/common/include/strife/unique/: identifier.h  unique.h
strife/common/include/strife/utility/: iterator.h
strife/common/include/time/: timer.h
strife/common/src/: dispatcher.cpp  identifier.cpp  timer.cpp  unique.cpp
strife/common/src/dispatch/: dispatcher.cpp
strife/common/src/input/: button_input.cpp  input_manager.cpp  key_button_processor.cpp  mouse_button_processor.cpp  mouse_input.cpp  mouse_processor.cpp
strife/common/src/serialization/: contexts.cpp  serialization.cpp
strife/common/src/strife/functional/: dispatcher.cpp  dispatchers.cpp
strife/common/src/strife/input/: button_input.cpp  input_manager.cpp  key_button_processor.cpp  mouse_button_processor.cpp  mouse_input.cpp  mouse_processor.cpp
strife/common/src/strife/serialization/: contexts.cpp
strife/common/src/strife/time/: time.cpp  timer.cpp
strife/common/src/strife/unique/: identifier.cpp  unique.cpp
strife/common/src/time/: timer.cpp
strife/core/: CMakeLists.txt
strife/core/include/: component.h  engine.h  entity.h  events.h  scene.h  storage.h  system.h
strife/core/include/strife/core/: component.h  engine.h  entity.h  events.h  scene.h  storage.h  system.h
strife/core/include/strife/events/: input_event.h  scene_load_event.h  scene_swap_event.h  scene_unload_event.h  update_event.h
strife/core/src/: component.cpp  engine.cpp  entity.cpp  scene.cpp  storage.cpp  system.cpp
strife/core/src/strife/core/: component.cpp  engine.cpp  entity.cpp  scene.cpp  system.cpp
strife/core/src/strife/events/: input_event.cpp  scene_load_event.cpp  scene_swap_event.cpp  scene_unload_event.cpp
strife/main/: CMakeLists.txt
strife/main/include/: input_manager.h  input_system.h  render_system.h
strife/main/include/strife/main/components/: collider_base.h  rigid_body.h  sphere_collider.h  transform.h
strife/main/include/strife/main/systems/: input_system.h  physics_system.h  render_system.h
strife/main/src/: input_manager.cpp  input_system.cpp  render_system.cpp
strife/main/src/strife/main/components/: collider_base.cpp  rigid_body.cpp  sphere_collider.cpp  transform.cpp
strife/main/src/strife/main/systems/: input_system.cpp  physics_system.cpp  render_system.cpp
strife/math/: CMakeLists.txt
strife/math/include/: vector.h  vector2.h
strife/math/include/strife/math/: base.h  math.h  vector.h
strife/math/include/strife/math/matrix/: matrix.h  matrix2.h  matrix2f.h  matrix2i.h  matrix3.h  matrix3f.h  matrix3i.h  matrix4.h  matrix4f.h  matrix4i.h
strife/math/include/strife/math/quaternion/: quaternion.h  quaternionf.h  quaternioni.h
strife/math/include/strife/math/vector/: vector.h  vector2.h  vector2f.h  vector2i.h  vector3.h  vector3f.h  vector3i.h  vector4.h  vector4f.h  vector4i.h
strife/math/src/: vector2.cpp
strife/math/src/strife/math/: vector2.cpp
strife/math/src/strife/math/matrix/: matrix2f.cpp  matrix2i.cpp  matrix3f.cpp  matrix3i.cpp  matrix4f.cpp  matrix4i.cpp
strife/math/src/strife/math/vector/: vector2f.cpp  vector2i.cpp  vector3f.cpp  vector3i.cpp  vector4f.cpp  vector4i.cpp
strife/reflection/: CMakeLists.txt
strife/reflection/include/strife/reflection/: type.h
strife/reflection/src/strife/reflection/: type.cpp
strife/serialization/: CMakeLists.txt
strife/serialization/include/strife/serialization/: context.h  contexts.h  data.h
strife/serialization/src/strife/serialization/: context.cpp  contexts.cpp
test/: CMakeLists.txt  build.sh  main.cpp
test/common/: CMakeLists.txt
test/common/include/strife/: common.h  macros.h
test/common/include/strife/chrono/: timer.h
test/common/include/strife/functional/: dispatcher.h  message.h
test/common/include/strife/identity/: identifier.h
test/common/include/strife/reflection/: type.h
test/common/src/strife/chrono/: timer.cpp
test/common/src/strife/functional/: dispatcher.cpp
test/common/src/strife/identity/: identifier.cpp
test/common/src/strife/reflection/: type.cpp
test/core/: CMakeLists.txt
test/core/include/strife/: core.h
test/core/include/strife/core/: component.h  entity.h  scene.h  storage.h  system.h
test/core/src/strife/core/: component.cpp  entity.cpp  scene.cpp
